objects/Survey_Appeal__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Survey_Appeal_RCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Appeal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Any_CLS_raised__c</fullName>
        <label>Any CLS raised</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appeal_Category__c</fullName>
        <label>Appeal Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Score Change</fullName>
                </value>
                <value>
                    <fullName>Agent Change</fullName>
                </value>
                <value>
                    <fullName>Product Change</fullName>
                </value>
                <value>
                    <fullName>Training Class Change</fullName>
                </value>
                <value>
                    <fullName>Attribute to Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appeal_Reason__c</fullName>
        <inlineHelpText>Customer selected wrong rating (i.e. selected VDSAT instead of VSAT)
Customer selected wrong product (s) (i.e selected CSN instead of Event)
Customer not satisfied with non-CS process (i.e. professional services)</inlineHelpText>
        <label>Appeal Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Change</fullName>
                </value>
                <value>
                    <fullName>Attribute to Process (non CS or CS)</fullName>
                </value>
                <value>
                    <fullName>Product Change</fullName>
                </value>
                <value>
                    <fullName>Training Class Change</fullName>
                </value>
                <value>
                    <fullName>Associate to Different Case</fullName>
                </value>
                <value>
                    <fullName>Score Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <label>Appeal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <label>Attendee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Issue_Category_for_CrowdCompass__c</fullName>
        <description># 11816267</description>
        <label>Bucket Issue Category (Analysis)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Conducted_by_Team__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communication Skills</fullName>
                </value>
                <value>
                    <fullName>Responsiveness</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Meeting commitments or expectations</fullName>
                </value>
                <value>
                    <fullName>Understanding/Anticipating client needs</fullName>
                </value>
                <value>
                    <fullName>Ease/Difficulty of loading content</fullName>
                </value>
                <value>
                    <fullName>Attendee Experience</fullName>
                </value>
                <value>
                    <fullName>Consultative approach/Proactiveness</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bucket_Issue_category__c</fullName>
        <label>Bucket/Issue category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Expectation</fullName>
                </value>
                <value>
                    <fullName>US/India RM</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Comprehension</fullName>
                </value>
                <value>
                    <fullName>Consultative approach</fullName>
                </value>
                <value>
                    <fullName>Ease of contact</fullName>
                </value>
                <value>
                    <fullName>Follow up not done</fullName>
                </value>
                <value>
                    <fullName>Internal Process failure</fullName>
                </value>
                <value>
                    <fullName>Rep Knowledge</fullName>
                </value>
                <value>
                    <fullName>Product limitation/Feature issue</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Bug Identified</fullName>
                </value>
                <value>
                    <fullName>Other Departments</fullName>
                </value>
                <value>
                    <fullName>Quality Of Resolution/Response</fullName>
                </value>
                <value>
                    <fullName>Delay in Providing Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Out_for_person_dept_outside_CS__c</fullName>
        <label>Call Out (for person/dept outside CS)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Callback_done__c</fullName>
        <label>Callback done?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Callback_done_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Callback done by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Appeal_RCA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cart_Stage__c</fullName>
        <label>Cart Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New CART</fullName>
                </value>
                <value>
                    <fullName>1st Review</fullName>
                </value>
                <value>
                    <fullName>2nd Review</fullName>
                </value>
                <value>
                    <fullName>3rd Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Survey_Appeal_RCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Survey_Appeal_RCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_of_details_shared_with_floor__c</fullName>
        <label>Content of details shared with floor</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Controllable__c</fullName>
        <label>Controllable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Product_Selected__c</fullName>
        <label>Current Product Selected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>Enterprise Events</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Event Builder</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Hospitality Cloud</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>OnArrival 360</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>Travel/Transient</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Escalation_Comments__c</fullName>
        <label>Customer/Escalation Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSAT_Escalation_RCA__c</fullName>
        <label>Root Cause Analysis</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DSAT_Reason__c</fullName>
        <label>DSAT Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>US/India RM</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Callback__c</fullName>
        <label>Date of Callback</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_the_Root_Cause__c</fullName>
        <label>Describe the Root Cause</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EB_SB_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EB SB Project</label>
        <referenceTo>EB_SB_Builder__c</referenceTo>
        <relationshipName>Survey_Appeal_RCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalation_Cause__c</fullName>
        <label>Escalation Cause</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Nature_of_Escalation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Product Malfuncion</fullName>
                </value>
                <value>
                    <fullName>Feature Not Available</fullName>
                </value>
                <value>
                    <fullName>Person - lack of knowledge</fullName>
                </value>
                <value>
                    <fullName>Person - lack of skill</fullName>
                </value>
                <value>
                    <fullName>Person - Process adherence Issue</fullName>
                </value>
                <value>
                    <fullName>Person - Behavioral Issue</fullName>
                </value>
                <value>
                    <fullName>Process Not Defined</fullName>
                </value>
                <value>
                    <fullName>Process lacks clarity</fullName>
                </value>
                <value>
                    <fullName>Process does not check adherence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Comments__c</fullName>
        <inlineHelpText>No dilution/paraphrasing/rephrasing - write exactly what the complainant stated</inlineHelpText>
        <label>Escalation Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Received_Date__c</fullName>
        <label>Escalation Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Source__c</fullName>
        <label>Escalation Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DSAT Survey</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_Status__c</fullName>
        <label>Execution Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 Approval pending</fullName>
                </value>
                <value>
                    <fullName>Level 2 Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approval Denied(closed status)</fullName>
                </value>
                <value>
                    <fullName>Changes Executed(closed status)</fullName>
                </value>
                <value>
                    <fullName>Execution Pending</fullName>
                </value>
                <value>
                    <fullName>Unappealable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highlights__c</fullName>
        <label>Highlights</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Immediate_Manager_Email__c</fullName>
        <label>Immediate Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Immediate_Manager__c</fullName>
        <label>Immediate Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Usage__c</fullName>
        <label>KB Usage</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2_Approver_Email__c</fullName>
        <label>L2 Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>L3_Approver_Status__c</fullName>
        <label>Level 3 Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTS_trigerred_out_of_any_incident_outage__c</fullName>
        <label>LTS trigerred out of any incident/outage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Conducted_by_Team__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CVII Issue</fullName>
                </value>
                <value>
                    <fullName>CSPL Issue</fullName>
                </value>
                <value>
                    <fullName>Phone Issue</fullName>
                </value>
                <value>
                    <fullName>Power outage</fullName>
                </value>
                <value>
                    <fullName>Chat disconnection</fullName>
                </value>
                <value>
                    <fullName>SF issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_Next_Step__c</fullName>
        <label>Learning - Next Step</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_1_Analysis__c</fullName>
        <description>#11816267</description>
        <label>Level 1 Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bucket_Issue_Category_for_CrowdCompass__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unclear explanations</fullName>
                </value>
                <value>
                    <fullName>Fluency and clarity in speech</fullName>
                </value>
                <value>
                    <fullName>Language (written and verbal)</fullName>
                </value>
                <value>
                    <fullName>Delayed Response</fullName>
                </value>
                <value>
                    <fullName>Product limitations</fullName>
                </value>
                <value>
                    <fullName>Bugs identified</fullName>
                </value>
                <value>
                    <fullName>Lack of product knowledge "</fullName>
                </value>
                <value>
                    <fullName>Unrealistic expectation setting</fullName>
                </value>
                <value>
                    <fullName>Lack of pro-active check ins/reminders</fullName>
                </value>
                <value>
                    <fullName>Unfulfilled Commitments</fullName>
                </value>
                <value>
                    <fullName>Lack of understanding requirements</fullName>
                </value>
                <value>
                    <fullName>Lack of resources/bandwidth</fullName>
                </value>
                <value>
                    <fullName>Lack of understanding of the tool</fullName>
                </value>
                <value>
                    <fullName>Complex Structure"</fullName>
                </value>
                <value>
                    <fullName>Attendee facing concerns</fullName>
                </value>
                <value>
                    <fullName>Product workarounds/Caveats</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>New Updates/Changes</fullName>
                </value>
                <value>
                    <fullName>Deployment Options</fullName>
                </value>
                <value>
                    <fullName>App adoption"</fullName>
                </value>
                <value>
                    <fullName>Onboarding Experience</fullName>
                </value>
                <value>
                    <fullName>SF Management</fullName>
                </value>
                <value>
                    <fullName>Other teams</fullName>
                </value>
                <value>
                    <fullName>Lack of proactive escalation</fullName>
                </value>
                <value>
                    <fullName>Activating Features"</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Timeline Adherence</fullName>
                </value>
                <value>
                    <fullName>Consultative Approach</fullName>
                </value>
                <value>
                    <fullName>Quality of Deliverables</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_1_Approver_Comments__c</fullName>
        <label>Level 1 Approver Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_1_Approver_Status__c</fullName>
        <label>Level 1 Approver Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_1_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 1 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Appeal2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_2_Analysis__c</fullName>
        <description># 11816267</description>
        <label>Level 2 Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Level_1_Analysis__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vague/generic</fullName>
                </value>
                <value>
                    <fullName>Unstructured</fullName>
                </value>
                <value>
                    <fullName>Unprofessionlism</fullName>
                </value>
                <value>
                    <fullName>Sentence formation</fullName>
                </value>
                <value>
                    <fullName>Rate of speech</fullName>
                </value>
                <value>
                    <fullName>Lack of call control</fullName>
                </value>
                <value>
                    <fullName>Grammatical errors</fullName>
                </value>
                <value>
                    <fullName>Punctuations</fullName>
                </value>
                <value>
                    <fullName>Use of jargon</fullName>
                </value>
                <value>
                    <fullName>Incorrect pronunciation</fullName>
                </value>
                <value>
                    <fullName>Missing email TAT</fullName>
                </value>
                <value>
                    <fullName>Polls</fullName>
                </value>
                <value>
                    <fullName>Live Q&amp;A</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Social Wall</fullName>
                </value>
                <value>
                    <fullName>Click</fullName>
                </value>
                <value>
                    <fullName>Maps</fullName>
                </value>
                <value>
                    <fullName>Notifications</fullName>
                </value>
                <value>
                    <fullName>Emails</fullName>
                </value>
                <value>
                    <fullName>In-app game</fullName>
                </value>
                <value>
                    <fullName>Attendee messaging</fullName>
                </value>
                <value>
                    <fullName>Geo locations</fullName>
                </value>
                <value>
                    <fullName>Polling question length</fullName>
                </value>
                <value>
                    <fullName>Session survey feedback</fullName>
                </value>
                <value>
                    <fullName>Event Feed</fullName>
                </value>
                <value>
                    <fullName>Attendee Login</fullName>
                </value>
                <value>
                    <fullName>Deployment Options</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
                <value>
                    <fullName>Beacons</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_2_Approval_Status__c</fullName>
        <label>Level 2 Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_2_Approver_Comments__c</fullName>
        <label>Level 2 Approver Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_2_Approver__c</fullName>
        <label>Level 2 Approver</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Approver_Comments__c</fullName>
        <label>Level 3 Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_3_Approver__c</fullName>
        <label>Level 3 Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Approver_email__c</fullName>
        <label>Level 3 Approver email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>IF(NOT(ISBLANK(Survey_Information__r.Case__c)), HYPERLINK("https://cvent.my.salesforce.com/"&amp;Survey_Information__r.Case__r.Id ,"Click here for details"), 

IF(NOT(ISBLANK(Survey_Information__r.Onboarding__c)), HYPERLINK("https://cvent.my.salesforce.com/"&amp;Survey_Information__r.Onboarding__r.Id ,"Click here for details"),

IF(NOT(ISBLANK(Survey_Information__r.MobileApp__c)), HYPERLINK("https://cvent.my.salesforce.com/"&amp;Survey_Information__r.MobileApp__r.Id ,"Click here for details"),

IF(NOT(ISBLANK(Survey_Information__r.EBSB__c)), HYPERLINK("https://cvent.my.salesforce.com/"&amp;Survey_Information__r.EBSB__r.Id ,"Click here for details"),""

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to object Surveyed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_Medium_High__c</fullName>
        <label>Level of effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile App</label>
        <referenceTo>Mobile_Card__c</referenceTo>
        <relationshipName>Survey_Appeal_RCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nature_of_Escalation__c</fullName>
        <label>Nature of Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Person</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Client Expectation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding_Training__c</fullName>
        <label>Onboarding &amp; Training</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Conducted_by_Team__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Web2Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Appeal3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_CSAT_Score__c</fullName>
        <label>Original CSAT Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neither Satisfied nor Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Conducted_by_Team__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Valid - Attribute to rep</fullName>
                </value>
                <value>
                    <fullName>Valid - Attribute to Process</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>